src/components/containers/artists/ArtistArtworkDetailContainer/artistArtworkDetailContainer.module.css
.leftPane {
  @apply /*TODO
  bottom
  margin
  above
  footer
  should
  be
  defined
  in
  footer
  or global layout*/ relative !flex h-fit flex-col overflow-y-scroll pt-10 scrollbar-none md:sticky md:top-[60px] md:mb-[7.5rem]
  md:h-[calc(100vh-60px)];
}

.leftPaneContent {
  @apply flex-1;
}

.rightPane {
  @apply /*TODO
  bottom
  margin above footer should be defined in footer or global layout*/ flex flex-col
  md:mb-[7.5rem];
}

.ctaContainer {
  @apply fixed
  bottom-0
  left-0
  z-[300]
  w-full
  max-w-[580px]
  px-[1.25rem]
  md:sticky
  md:px-0;
}

.ctaContainerTop {
  @apply h-[2rem]
  bg-gradient-to-t
  from-white-100
  opacity-75;
}

.ctaBody {
  @apply bg-white-100
  py-[0.625rem]
  md:py-[1.25rem];
}

.btnCTA {
  @apply mt-[1.25rem]
  w-full;
}

.btnCTASecondary {
  @apply mt-[1.25rem]
  border-none;
}

.header {
  @apply mb-[1.25rem];
}
.subtitle {
  @apply italic
  !text-black-100;
}

.subtitleYear {
  @apply !text-black-100;
}

.learnMore {
  @apply mt-[1.25rem];
}

.artworkDetailText {
  @apply mb-[0.675rem]
  text-black-60;
}

.textSectionContainer {
  @apply mb-[0.675rem];
}

.priceAndCurrency {
  @apply text-black-100;
}

.framed {
  @apply text-black-60;
}

.singleMediaItem {
  @apply mb-[1.25rem];
}

